--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="CurrencyXChange is your straightforward currency converter app, allowing you to effortlessly convert between various currencies by entering an amount and selecting the currency you wish to convert from and the currency you want to convert to. With a user-friendly interface and a wide range of supported currencies, CurrencyXChange makes it easy for you to stay on top of exchange rates and perform quick and accurate currency conversions on the fly. Say goodbye to currency confusion and simplify your financial transactions with CurrencyXChange today!"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Currency Converter - Mariana Tellez Resendiz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
