--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
       content="CurrencyXChange is your straightforward currency converter app, allowing you to effortlessly convert between various currencies by entering an amount and selecting the currency you wish to convert from and the currency you want to convert to. With a user-friendly interface and a wide range of supported currencies, CurrencyXChange makes it easy for you to stay on top of exchange rates and perform quick and accurate currency conversions on the fly. Say goodbye to currency confusion and simplify your financial transactions with CurrencyXChange today!"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora&family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Currency Converter - Mariana Tellez Resendiz</title>
   </head>
